--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
             border-radius: 5px;
             background-color: #e9ecef;
         }
+        .timestamp {
+            font-size: 0.8em;
+            color: #888;
+        }
         #username {
             width: 100%;
             padding: 10px;
@@ -81,29 +85,29 @@
             usernameInput.value = savedUsername;
         }
 
-        // Fetch existing messages (this is just an example; Ably does not store messages)
+        // Fetch and display existing messages from local storage
         function fetchMessages() {
-            // In a real implementation, you would use a database to retrieve messages
-            // Here we simulate fetching existing messages
-            channel.history((result) => {
-                result.items.forEach(item => {
-                    displayMessage(item.data);
-                });
-            });
+            const messages = JSON.parse(localStorage.getItem('messages')) || [];
+            messages.forEach(displayMessage);
         }
 
         // Display a message
-        function displayMessage(message) {
+        function displayMessage({ username, message, timestamp }) {
             const messageElement = document.createElement('div');
             messageElement.className = 'message';
-            messageElement.textContent = message;
+            messageElement.innerHTML = `<strong>${username}</strong>: ${message} <span class="timestamp">(${new Date(timestamp).toLocaleTimeString()})</span>`;
             chatDiv.appendChild(messageElement);
             chatDiv.scrollTop = chatDiv.scrollHeight; // Auto-scroll
         }
 
         // Subscribe to incoming messages
         channel.subscribe('message', (msg) => {
-            displayMessage(msg.data);
+            const { data } = msg;
+            const { username, message, timestamp } = JSON.parse(data);
+            displayMessage({ username, message, timestamp });
+
+            // Save to local storage
+            saveMessageToLocalStorage(username, message, timestamp);
         });
 
         // Send message
@@ -111,9 +115,18 @@
             const username = usernameInput.value.trim();
             const message = messageInput.value.trim();
             if (username && message) {
-                channel.publish('message', `${username}: ${message}`);
+                const timestamp = Date.now();
+                const data = JSON.stringify({ username, message, timestamp });
+                channel.publish('message', data);
                 messageInput.value = ''; // Clear input
             }
+        }
+
+        // Save message to local storage
+        function saveMessageToLocalStorage(username, message, timestamp) {
+            const messages = JSON.parse(localStorage.getItem('messages')) || [];
+            messages.push({ username, message, timestamp });
+            localStorage.setItem('messages', JSON.stringify(messages));
         }
 
         // Event listeners
