--- a/index.html
+++ b/index.html
@@ -1,152 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Application</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-        }
-        h1 {
-            text-align: center;
-            color: #333;
-        }
-        #chat {
-            max-height: 400px;
-            overflow-y: auto;
-            border: 1px solid #ccc;
-            padding: 10px;
-            background: white;
-            margin-bottom: 10px;
-            border-radius: 5px;
-        }
-        #message {
-            width: 75%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        #send {
-            padding: 10px;
-            background-color: #5cb85c;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        #send:hover {
-            background-color: #4cae4c;
-        }
-        .message {
-            margin: 5px 0;
-            padding: 5px;
-            border-radius: 5px;
-            background-color: #e9ecef;
-        }
-        .timestamp {
-            font-size: 0.8em;
-            color: #888;
-        }
-        #username {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-bottom: 10px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Realtime Chat</title>
+  <style>
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #74ebd5 0%, #9face6 100%);
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .chat-container {
+      width: 95%;
+      max-width: 600px;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.2);
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
+    }
+
+    #chat {
+      flex: 1;
+      overflow-y: auto;
+      padding: 15px;
+      background: #fdfdfd;
+    }
+
+    .message {
+      margin: 8px 0;
+      padding: 10px 14px;
+      border-radius: 8px;
+      background-color: #e9ecef;
+      line-height: 1.4;
+    }
+
+    .message strong {
+      color: #333;
+    }
+
+    .timestamp {
+      font-size: 0.75em;
+      color: #777;
+      margin-left: 6px;
+    }
+
+    .input-bar {
+      display: flex;
+      padding: 12px;
+      border-top: 1px solid #eee;
+      background: #fafafa;
+    }
+
+    #message {
+      flex: 1;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      outline: none;
+    }
+
+    #send {
+      margin-left: 10px;
+      padding: 10px 18px;
+      background-color: #5cb85c;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.2s;
+    }
+
+    #send:disabled {
+      background-color: #aaa;
+      cursor: not-allowed;
+    }
+
+    #send:hover:not(:disabled) {
+      background-color: #4cae4c;
+    }
+
+    #username {
+      border: none;
+      border-bottom: 2px solid #ccc;
+      padding: 12px;
+      font-size: 1em;
+      width: 100%;
+      outline: none;
+    }
+
+    #username:focus {
+      border-color: #5cb85c;
+    }
+
+  </style>
 </head>
 <body>
-    <h1>Chat Application</h1>
+  <div class="chat-container">
     <input type="text" id="username" placeholder="Enter your username..." />
     <div id="chat"></div>
-    <div>
-        <input type="text" id="message" placeholder="Type a message..." />
-        <button id="send">Send</button>
+    <div class="input-bar">
+      <input type="text" id="message" placeholder="Type a message..." disabled />
+      <button id="send" disabled>Send</button>
     </div>
+  </div>
 
-    <script src="https://cdn.ably.com/lib/ably.min-1.js"></script>
-    <script>
-        const ably = new Ably.Realtime('Vtd4-A.9jmIFA:umDML_i9STQP4BIH_u2Jon5BlkxuiK36w37FVrkhEl4'); // Your Ably API key
-        const channel = ably.channels.get('chat');
+  <script src="https://cdn.ably.com/lib/ably.min-1.js"></script>
+  <script>
+    const ably = new Ably.Realtime('Vtd4-A.9jmIFA:umDML_i9STQP4BIH_u2Jon5BlkxuiK36w37FVrkhEl4'); 
+    const channel = ably.channels.get('chat');
 
-        const chatDiv = document.getElementById('chat');
-        const messageInput = document.getElementById('message');
-        const sendButton = document.getElementById('send');
-        const usernameInput = document.getElementById('username');
+    const chatDiv = document.getElementById('chat');
+    const messageInput = document.getElementById('message');
+    const sendButton = document.getElementById('send');
+    const usernameInput = document.getElementById('username');
 
-        // Set username from local storage if it exists
-        const savedUsername = localStorage.getItem('username');
-        if (savedUsername) {
-            usernameInput.value = savedUsername;
-        }
+    // Restore saved username
+    const savedUsername = localStorage.getItem('username');
+    if (savedUsername) {
+      usernameInput.value = savedUsername;
+      enableChatInputs();
+    }
 
-        // Fetch and display existing messages from local storage
-        function fetchMessages() {
-            const messages = JSON.parse(localStorage.getItem('messages')) || [];
-            // Sort messages by timestamp to ensure chronological order
-            messages.sort((a, b) => a.timestamp - b.timestamp);
-            messages.forEach(displayMessage);
-        }
+    // Display a message
+    function displayMessage({ username, message, timestamp }) {
+      const messageElement = document.createElement('div');
+      messageElement.className = 'message';
+      messageElement.innerHTML = `<strong>${username}</strong>: ${message} <span class="timestamp">${new Date(timestamp).toLocaleTimeString()}</span>`;
+      chatDiv.appendChild(messageElement);
+      chatDiv.scrollTop = chatDiv.scrollHeight;
+    }
 
-        // Display a message
-        function displayMessage({ username, message, timestamp }) {
-            const messageElement = document.createElement('div');
-            messageElement.className = 'message';
-            messageElement.innerHTML = `<strong>${username}</strong>: ${message} <span class="timestamp">(${new Date(timestamp).toLocaleTimeString()})</span>`;
-            chatDiv.appendChild(messageElement);
-            chatDiv.scrollTop = chatDiv.scrollHeight; // Auto-scroll
-        }
+    // Subscribe to incoming messages
+    channel.subscribe('message', (msg) => {
+      const { username, message, timestamp } = JSON.parse(msg.data);
+      displayMessage({ username, message, timestamp });
+    });
 
-        // Subscribe to incoming messages
-        channel.subscribe('message', (msg) => {
-            const { data } = msg;
-            const { username, message, timestamp } = JSON.parse(data);
-            displayMessage({ username, message, timestamp });
+    // Load Ably history on startup
+    channel.history((err, resultPage) => {
+      if (err) {
+        console.error("History error:", err);
+        return;
+      }
+      const historyMessages = resultPage.items.reverse().map(msg => JSON.parse(msg.data));
+      historyMessages.forEach(displayMessage);
+    });
 
-            // Save to local storage
-            saveMessageToLocalStorage(username, message, timestamp);
-        });
+    function sendMessage() {
+      const username = usernameInput.value.trim();
+      const message = messageInput.value.trim();
+      if (username && message) {
+        const timestamp = Date.now();
+        const data = JSON.stringify({ username, message, timestamp });
+        channel.publish('message', data);
+        messageInput.value = '';
+      }
+    }
 
-        // Send message
-        function sendMessage() {
-            const username = usernameInput.value.trim();
-            const message = messageInput.value.trim();
-            if (username && message) {
-                const timestamp = Date.now();
-                const data = JSON.stringify({ username, message, timestamp });
-                channel.publish('message', data);
-                messageInput.value = ''; // Clear input
-            }
-        }
+    function enableChatInputs() {
+      messageInput.disabled = false;
+      sendButton.disabled = false;
+    }
 
-        // Save message to local storage
-        function saveMessageToLocalStorage(username, message, timestamp) {
-            const messages = JSON.parse(localStorage.getItem('messages')) || [];
-            messages.push({ username, message, timestamp });
-            localStorage.setItem('messages', JSON.stringify(messages));
-        }
+    // Save username
+    usernameInput.addEventListener('change', () => {
+      const username = usernameInput.value.trim();
+      if (username) {
+        localStorage.setItem('username', username);
+        enableChatInputs();
+        messageInput.focus();
+      }
+    });
 
-        // Event listeners
-        sendButton.addEventListener('click', sendMessage);
-        messageInput.addEventListener('keypress', (event) => {
-            if (event.key === 'Enter') {
-                sendMessage();
-            }
-        });
-        usernameInput.addEventListener('change', () => {
-            const username = usernameInput.value.trim();
-            if (username) {
-                localStorage.setItem('username', username);
-            }
-        });
-
-        // Fetch existing messages on page load
-        fetchMessages();
-    </script>
+    // Events
+    sendButton.addEventListener('click', sendMessage);
+    messageInput.addEventListener('keypress', (event) => {
+      if (event.key === 'Enter') sendMessage();
+    });
+  </script>
 </body>
 </html>
