--- a/index.html
+++ b/index.html
@@ -7,30 +7,70 @@
   <style>
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #74ebd5 0%, #9face6 100%);
       margin: 0;
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
+      background-color: white;
+      color: black;
+    }
+
+    /* Dark mode support */
+    @media (prefers-color-scheme: dark) {
+      body {
+        background-color: #000;
+        color: #fff;
+      }
+      .chat-container {
+        background: #111;
+        color: #fff;
+      }
+      .message {
+        background: #222;
+        color: #ddd;
+      }
+      #message {
+        background: #222;
+        color: #fff;
+        border: 1px solid #555;
+      }
+      #username, #pinInput {
+        background: #222;
+        color: #fff;
+        border-bottom: 2px solid #555;
+      }
     }
 
     .chat-container {
       width: 95%;
-      max-width: 600px;
+      max-width: 1100px;
+      height: 90vh;
       background: #fff;
       border-radius: 12px;
       box-shadow: 0 8px 30px rgba(0,0,0,0.2);
       display: flex;
-      flex-direction: column;
       overflow: hidden;
     }
 
+    /* Left side: chat */
     #chat {
-      flex: 1;
+      flex: 3;
       overflow-y: auto;
-      padding: 15px;
-      background: #fdfdfd;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      background: inherit;
+    }
+
+    /* Right side: inputs */
+    .sidebar {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      padding: 20px;
+      border-left: 1px solid #ddd;
+      background: inherit;
     }
 
     .message {
@@ -39,6 +79,14 @@
       border-radius: 8px;
       background-color: #e9ecef;
       line-height: 1.4;
+      word-wrap: break-word;
+    }
+
+    .message img {
+      max-width: 300px;
+      border-radius: 6px;
+      margin-top: 6px;
+      display: block;
     }
 
     .message strong {
@@ -51,11 +99,13 @@
       margin-left: 6px;
     }
 
-    .input-bar {
-      display: flex;
-      padding: 12px;
-      border-top: 1px solid #eee;
-      background: #fafafa;
+    #username, #pinInput {
+      border: none;
+      border-bottom: 2px solid #ccc;
+      padding: 10px;
+      margin-bottom: 15px;
+      font-size: 1em;
+      outline: none;
     }
 
     #message {
@@ -64,11 +114,11 @@
       border: 1px solid #ccc;
       border-radius: 8px;
       outline: none;
+      margin-bottom: 15px;
     }
 
     #send {
-      margin-left: 10px;
-      padding: 10px 18px;
+      padding: 12px;
       background-color: #5cb85c;
       color: white;
       border: none;
@@ -86,40 +136,104 @@
       background-color: #4cae4c;
     }
 
-    #username {
-      border: none;
-      border-bottom: 2px solid #ccc;
+    /* PIN screen */
+    .overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: rgba(0,0,0,0.6);
+      z-index: 100;
+    }
+
+    .pin-box {
+      background: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      text-align: center;
+      max-width: 300px;
+      width: 90%;
+    }
+
+    .pin-box h2 {
+      margin-bottom: 15px;
+    }
+
+    .pin-box input {
+      width: 100%;
       padding: 12px;
       font-size: 1em;
-      width: 100%;
-      outline: none;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      margin-bottom: 15px;
+      text-align: center;
     }
 
-    #username:focus {
-      border-color: #5cb85c;
+    .pin-box button {
+      padding: 10px 18px;
+      background: #5cb85c;
+      border: none;
+      border-radius: 8px;
+      color: #fff;
+      cursor: pointer;
     }
-
   </style>
 </head>
 <body>
-  <div class="chat-container">
-    <input type="text" id="username" placeholder="Enter your username..." />
+  <div class="chat-container" id="chatApp" style="display:none;">
     <div id="chat"></div>
-    <div class="input-bar">
-      <input type="text" id="message" placeholder="Type a message..." disabled />
+    <div class="sidebar">
+      <input type="text" id="username" placeholder="Enter username..." />
+      <textarea id="message" placeholder="Type a message or paste image URL..." disabled></textarea>
       <button id="send" disabled>Send</button>
+    </div>
+  </div>
+
+  <!-- PIN overlay -->
+  <div class="overlay" id="pinOverlay">
+    <div class="pin-box">
+      <h2>Enter PIN</h2>
+      <input type="password" id="pinInput" placeholder="Set or Enter PIN">
+      <button id="pinBtn">Continue</button>
     </div>
   </div>
 
   <script src="https://cdn.ably.com/lib/ably.min-1.js"></script>
   <script>
-    const ably = new Ably.Realtime('Vtd4-A.9jmIFA:umDML_i9STQP4BIH_u2Jon5BlkxuiK36w37FVrkhEl4'); 
+    const ably = new Ably.Realtime('Vtd4-A.9jmIFA:umDML_i9STQP4BIH_u2Jon5BlkxuiK36w37FVrkhEl4');
     const channel = ably.channels.get('chat');
 
     const chatDiv = document.getElementById('chat');
     const messageInput = document.getElementById('message');
     const sendButton = document.getElementById('send');
     const usernameInput = document.getElementById('username');
+
+    const pinOverlay = document.getElementById('pinOverlay');
+    const pinInput = document.getElementById('pinInput');
+    const pinBtn = document.getElementById('pinBtn');
+    const chatApp = document.getElementById('chatApp');
+
+    // PIN system (only first time)
+    const savedPin = localStorage.getItem('chatPin');
+    pinBtn.addEventListener('click', () => {
+      const pin = pinInput.value.trim();
+      if (!pin) return;
+      if (!savedPin) {
+        localStorage.setItem('chatPin', pin);
+        unlockChat();
+      } else if (pin === savedPin) {
+        unlockChat();
+      } else {
+        alert('Wrong PIN');
+      }
+    });
+
+    function unlockChat() {
+      pinOverlay.style.display = 'none';
+      chatApp.style.display = 'flex';
+    }
 
     // Restore saved username
     const savedUsername = localStorage.getItem('username');
@@ -128,29 +242,35 @@
       enableChatInputs();
     }
 
-    // Display a message
+    // Display message
     function displayMessage({ username, message, timestamp }) {
-      const messageElement = document.createElement('div');
-      messageElement.className = 'message';
-      messageElement.innerHTML = `<strong>${username}</strong>: ${message} <span class="timestamp">${new Date(timestamp).toLocaleTimeString()}</span>`;
-      chatDiv.appendChild(messageElement);
+      const msgEl = document.createElement('div');
+      msgEl.className = 'message';
+
+      // detect image URL
+      let content = message;
+      if (message.match(/^https?:\/\/.*\.(jpg|jpeg|png|gif|webp)$/i)) {
+        content = `<img src="${message}" alt="image">`;
+      } else if (message.match(/^https?:\/\//i)) {
+        content = `<a href="${message}" target="_blank">${message}</a>`;
+      }
+
+      msgEl.innerHTML = `<strong>${username}</strong>: ${content} <span class="timestamp">${new Date(timestamp).toLocaleTimeString()}</span>`;
+      chatDiv.appendChild(msgEl);
       chatDiv.scrollTop = chatDiv.scrollHeight;
     }
 
-    // Subscribe to incoming messages
+    // Ably subscribe
     channel.subscribe('message', (msg) => {
       const { username, message, timestamp } = JSON.parse(msg.data);
       displayMessage({ username, message, timestamp });
     });
 
-    // Load Ably history on startup
+    // Ably history
     channel.history((err, resultPage) => {
-      if (err) {
-        console.error("History error:", err);
-        return;
-      }
-      const historyMessages = resultPage.items.reverse().map(msg => JSON.parse(msg.data));
-      historyMessages.forEach(displayMessage);
+      if (err) return console.error(err);
+      const history = resultPage.items.reverse().map(m => JSON.parse(m.data));
+      history.forEach(displayMessage);
     });
 
     function sendMessage() {
@@ -158,8 +278,7 @@
       const message = messageInput.value.trim();
       if (username && message) {
         const timestamp = Date.now();
-        const data = JSON.stringify({ username, message, timestamp });
-        channel.publish('message', data);
+        channel.publish('message', JSON.stringify({ username, message, timestamp }));
         messageInput.value = '';
       }
     }
@@ -169,7 +288,6 @@
       sendButton.disabled = false;
     }
 
-    // Save username
     usernameInput.addEventListener('change', () => {
       const username = usernameInput.value.trim();
       if (username) {
@@ -179,10 +297,12 @@
       }
     });
 
-    // Events
     sendButton.addEventListener('click', sendMessage);
-    messageInput.addEventListener('keypress', (event) => {
-      if (event.key === 'Enter') sendMessage();
+    messageInput.addEventListener('keypress', (e) => {
+      if (e.key === 'Enter' && !e.shiftKey) {
+        e.preventDefault();
+        sendMessage();
+      }
     });
   </script>
 </body>
